# PDFMerger

./: .gitignore  LICENSE  MANUAL.md  README.md  build.py  main.py  pyproject.toml
.github/workflows/: build.yml
pdfjoiner/: __init__.py  model.py  service.py  view.py
