[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pdfjoiner"
version = "0.1.0"
description = "A cross-platform tool for joining PDFs and images into a single PDF."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "PyMuPDF>=1.24",
]

[project.scripts]
pdfjoiner = "pdfjoiner.main:main"

[tool.setuptools.packages.find]
include = ["pdfjoiner*"]
